final update in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
         integrity="sha384-mkQ3/7FUtcGyoppY6bz/PORYoGqOl7/aSUMn2ymDOJcapfS6PHqxhRTMh1RR0Q6+"
         crossorigin="anonymous"></script>
     <script>
-        const socket = io.connect("http://localhost:5000");
+        const socket = io("https://open-board-mil8.onrender.com/");
         console.log("conncetion initialization");
     </script>
     <script src="./canva.js"></script>
